--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,21 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   text-align: center;
+  background: #282c34;
+}
+body {
+  background-color: #282c34;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -24,15 +28,94 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Estilos Calculadora */
+.Calculadora {
+  height: 100vh;
+  padding-top: 10px;
+  background-color: #282c34;
+  font-family: Lato, sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.lbmcoding-logo-contenedor {
+  width: 100%;
+  height: 50px;
+  margin: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.lbmcoding-logo {
+  height: 100px;
+}
+.contenedor-calculadora {
+  width: 400px;
+  height: 600px;
+  padding: 14px;
+  background-color: #202020;
+  border-radius: 20px;
+  border: 5px solid black;
+}
+
+.fila {
+  margin: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Estilos Busca minas */
+
+.Buscaminas {
+  font-family: sans-serif;
+  text-align: center;
+}
+.row {
+  display: flex;
+}
+.square {
+  box-sizing: border-box;
+  width: 30px;
+  height: 30px;
+  border-top: 3px solid #fff;
+  border-left: 3px solid #fff;
+  border-bottom: 3px solid #777;
+  border-right: 3px solid #777;
+  background-color: #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+}
+.square--revealed {
+  border: 1px solid #777;
+}
+.square--revealed[data-value="1"] {
+  color: #0000ff;
+}
+.square--revealed[data-value="2"] {
+  color: #027b00;
+}
+.square--revealed[data-value="3"] {
+  color: #ff0000;
+}
+.square--revealed[data-value="4"] {
+  color: #00007b;
+}
+.square--revealed[data-value="5"] {
+  color: #00007b;
+}
+.square--revealed[data-value="6"] {
+  color: #00007b;
+}
+.square--revealed[data-value="7"] {
+  color: #000000;
+}
+.square--revealed[data-value="8"] {
+  color: #7b7b7b;
 }
