--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #282c34;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.orbitron {
+  font-family: "Orbitron", sans-serif;
+  font-weight: 700;
+  font-size: 200;
+}
+
+.inter{
+  font-family: "Inter";
+}
+
+/* Ocultar las tarjetas por defecto fuera de la pantalla */
+.card {
+  opacity: 0;
+  transform: translateX(
+    75vw
+  ); /* O translateX(-75vw) para las que vienen de la izquierda */
+  transition: transform 2s ease-out, opacity 1s ease-out;
+}
+
+/* Mostrar y animar cuando entren en el viewport */
+.card.visible {
+  opacity: 1;
+  transform: translateX(0); /* La tarjeta vuelve a su posición original */
+}
+
+
+/* Snake */
+
+.Snake {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #282c34;
+}
+
+.Snake2 {
+  color: white;
+}
+
+.Snake3 {
+  margin: 20px;
+}
+
